firmware/lib/control-table/tests/ui/block_field_missing_enum_derive.stderr
error[E0277]: `BareEnum` does not expose an `ALLOWED` discriminant slice
  --> tests/ui/block_field_missing_enum_derive.rs:13:11
   |
13 |     mode: BareEnum,
   |           ^^^^^^^^ missing `#[derive(control_table::Enum)]`
   |
help: the trait `HasAllowed` is not implemented for `BareEnum`
  --> tests/ui/block_field_missing_enum_derive.rs:5:1
   |
 5 | enum BareEnum {
   | ^^^^^^^^^^^^^
   = note: add `#[derive(Enum)]` and `#[repr(u8)]` to `BareEnum` to generate `ALLOWED`

error[E0599]: no variant, associated function, or constant named `new` found for enum `BareEnum` in the current scope
  --> tests/ui/block_field_missing_enum_derive.rs:11:10
   |
 5 | enum BareEnum {
   | ------------- variant, associated function, or constant `new` not found for this enum
...
11 | #[derive(Block)]
   |          ^^^^^ variant, associated function, or constant not found in `BareEnum`
   |
   = note: this error originates in the derive macro `Block` (in Nightly builds, run with -Z macro-backtrace for more info)
